styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    min-height: 100vh;
    min-width: 100vw;
    display: flex;
    justify-content: center;
    align-items: center;
}

#chess-board {
    display: flex;
    flex-direction: column;
    height: 40em;
    width: 40em;
    border: 10px solid green;
    box-shadow: 0 0 10px black;
    overflow: hidden;
}

.grid-row {
    display: flex;
}

.grid-cell {
    flex: 1;
    aspect-ratio: 1/1;
    user-select: none;

    display: flex;
    justify-content: center;
    align-items: flex-end;
    border: 1px inset black;
}

.darkcells {
    background-color: rgb(67, 159, 67);
}

.lightcells {
    background-color: lightgoldenrodyellow;
}

.inRangeCells {
    background-color: rgb(255, 0, 0, 0.5);
    border: 1px inset black;

    font-size: 3em;
    font-weight: bolder;
    color: maroon;
}

.queenIcon {
    width: 90%;
    height: 90%;
}

